# AcademicArticleFunnel

./: README.md  artigos_com_clusters.csv  artigos_google_scholar.json  final.csv  main.py  pyproject.toml
handdlers/: data_processor.py  funnel_manager.py  search_manager.py  visualization_manager.py
